# kardashev

./: .gitattributes  .gitignore  Cargo.toml  README.md  serve_assets.sh
assets/shader/: Asset.toml  shader.wgsl
assets/source/test/: Asset.toml
assets/source/ui/: Asset.toml
assets/test/: Asset.toml  cube_texture.xcf
crates/kardashev-client/: Cargo.toml
crates/kardashev-client/src/: lib.rs
crates/kardashev-frontend/: Cargo.toml  app.css  index.html
crates/kardashev-frontend/src/: main.rs
crates/kardashev-frontend/src/app/: main.rs  mod.rs
crates/kardashev-frontend/src/scene/: camera.rs  renderer.rs  window.rs
crates/kardashev-frontend/src/scene/mesh/: teapot.rs
crates/kardashev-frontend/src/scene/window/: mod.rs
crates/kardashev-lab/src/: main.rs  time_scale.rs
crates/kardashev-protocol/: Cargo.toml
crates/kardashev-seed/src/: main.rs  render.rs
crates/kardashev-seed/src/gaia/: mod.rs
crates/kardashev-server/: Cargo.toml
crates/kardashev-server/src/: main.rs  server.rs
doc/: design.md  notes.md
kardashev-admin/: Cargo.toml  gaia_download.txt
kardashev-admin/src/: import_stars.rs  main.rs
kardashev-admin/src/catalog/: gliese.rs  hyg.rs  mod.rs
kardashev-admin/src/catalog/gaia/: mod.rs
kardashev-admin/src/utils/: mod.rs  teff-rgb.csv  teff_color.rs
kardashev-assets/: Cargo.toml
kardashev-assets-tool/: Cargo.toml
kardashev-assets-tool/src/: main.rs  server.rs
kardashev-assets/src/: atlas.rs  build_info.rs  cargo.rs  lib.rs  main.rs  material.rs  mesh.rs  processor.rs  server.rs  shader.rs  source.rs  texture.rs  wasm.rs  watch.rs
kardashev-assets/src/processor/: material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
kardashev-build/: Cargo.toml
kardashev-build/src/: lib.rs
kardashev-build/src/assets/: atlas.rs  build_info.rs  material.rs  mesh.rs  mod.rs  processor.rs  server.rs  shader.rs  source.rs  texture.rs
kardashev-build/src/ui/: app.css  cargo.rs  mod.rs
kardashev-build/src/util/: mod.rs  process.rs  watch.rs
kardashev-build/templates/: index.html
kardashev-cli/: Cargo.toml
kardashev-cli/src/: build.rs  main.rs  serve.rs
kardashev-cli/src/admin/: import_stars.rs  mod.rs
kardashev-cli/src/admin/catalog/: bright_stars.rs  hyg.rs  mod.rs
kardashev-cli/src/admin/utils/: mod.rs
kardashev-cli/src/util/: shutdown.rs
kardashev-client/: Cargo.toml
kardashev-client/src/: api.rs  assets.rs  lib.rs
kardashev-frontend/: Trunk.toml
kardashev-frontend/src/scene/: camera.rs  texture.rs
kardashev-frontend/src/scene/mesh/: mod.rs
kardashev-lab/: Cargo.toml  key_codes.txt
kardashev-lab/src/: constants.rs  main.rs
kardashev-protocol/: Cargo.toml
kardashev-protocol/src/: assets.rs  lib.rs
kardashev-protocol/src/admin/: mod.rs
kardashev-protocol/src/model/: star.rs
kardashev-seed/: Cargo.toml
kardashev-seed/migrations/: 20240922203122_initial.down.sql  20240922203122_initial.up.sql
kardashev-seed/src/: config.rs  main.rs  pack.rs
kardashev-server/: Cargo.toml
kardashev-server/src/: assets.rs  context.rs  error.rs  lib.rs  main.rs  server.rs
kardashev-server/src/api/: admin.rs  mod.rs
kardashev-server/src/api/admin/: mod.rs
kardashev-server/src/util/: mod.rs  serve_files.rs  sqlx.rs  ui.rs
kardashev-style/: Cargo.toml
kardashev-style-internal/: Cargo.toml
kardashev-style-internal/src/: lib.rs  manifest.rs  rename.rs
kardashev-style-macro/: Cargo.toml
kardashev-style-macro/src/: lib.rs
kardashev-style/examples/: hello_other.scss  hello_world.rs  hello_world.scss  prelude.scss
kardashev-style/src/: lib.rs
kardashev-ui/: Cargo.toml  index.html  prelude.scss
kardashev-ui/src/: error.rs  main.rs
kardashev-ui/src/app/: app.module.scss  app.scss  config.rs  main.rs  map.rs  mod.rs  prelude.scss  world_view.rs  world_view.scss
kardashev-ui/src/app/components/: dock.module.scss  dock.rs  dock.scss  icon.rs  icon.scss  mod.rs  window.module.scss  window.rs  window.scss
kardashev-ui/src/assets/: dyn_type.rs  image.rs  image_load.rs  load.rs  mod.rs  server.rs  store.rs  system.rs
kardashev-ui/src/components/: dock.rs  icon.rs  mod.rs
kardashev-ui/src/ecs/: mod.rs  plugin.rs  resource.rs  schedule.rs  server.rs  system.rs  tick.rs  world.rs
kardashev-ui/src/graphics/: backend.rs  blinn_phong.rs  blinn_phong.wgsl  camera.rs  camera.wgsl  draw_batch.rs  event_loop.rs  hdr.rs  light.rs  light.wgsl  loading.rs  material.rs  mod.rs  pbr.rs  pbr.wgsl  pipeline.rs  render_3d.rs  render_3d.wgsl  render_frame.rs  renderer.rs  rendering_system.rs  texture.rs  transform.rs  util.rs  utils.rs  window.rs
kardashev-ui/src/graphics/mesh/: mod.rs  shape.rs  teapot.rs
kardashev-ui/src/graphics/model/: mod.rs
kardashev-ui/src/graphics/shader/: shader.wgsl
kardashev-ui/src/input/: keyboard.rs  mod.rs  mouse.rs
kardashev-ui/src/renderer/: mod.rs  texture.rs  window.rs
kardashev-ui/src/renderer/shader/: shader.wgsl
kardashev-ui/src/scene/: mod.rs  renderer.rs
kardashev-ui/src/scene/window/: leptos.rs  mod.rs  window.module.scss
kardashev-ui/src/universe/star/: render.rs  shader.wgsl
kardashev-ui/src/utils/: any_cache.rs  file_store.rs  futures.rs  mod.rs  small_linear_map.rs  thread_local_cell.rs  time.rs
kardashev-ui/src/utils/web_fs/: database.rs  file_lock.rs  mod.rs  path.rs
kardashev-ui/src/utils/webfs/: database.rs  fs_impl.rs  mod.rs  path.rs
kardashev-ui/src/world/: mod.rs  plugin.rs  resource.rs  schedule.rs  server.rs  system.rs  tick.rs
migrations/: 20240407173157_initial.down.sql  20240407173157_initial.up.sql
