[workspace]
resolver = "2"
members = [
    "kardashev-build",
    "kardashev-cli",
    "kardashev-client",
    "kardashev-lab",
    "kardashev-protocol",
    "kardashev-server",
    "kardashev-ui",
]

[workspace.dependencies.kardashev-build]
path = "kardashev-build"
version = "0.1.0"

[workspace.dependencies.kardashev-client]
path = "kardashev-client"
version = "0.1.0"

[workspace.dependencies.kardashev-protocol]
path = "kardashev-protocol"
version = "0.1.0"

[workspace.dependencies.kardashev-server]
path = "kardashev-server"
version = "0.1.0"
