[package]
name = "kardashev-admin"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies.kardashev-client]
workspace = true

[dependencies]
async-compression = { version = "0.4.6", features = ["gzip", "tokio"] }
chrono = "0.4.38"
color-eyre = "0.6.2"
clap = { version = "4.5.18", features = ["derive", "env"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
dotenvy = "0.15.7"
futures = "0.3.30"
image = { version = "0.25.2", features = ["png"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
num_cpus = "1.16.0"
palette = { version = "0.7.5", features = ["serializing"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
csv = "1.3.0"
itertools = "0.13.0"
url = "2.5.2"
