[package]
name = "kardashev-assets"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies]
color-eyre = "0.6.2"
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenvy = "0.15.7"
image = { version = "0.25.2", features = ["png"] }
indicatif = "0.17.8"
palette = { version = "0.7.5", features = ["serializing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
url = { version = "2.5.2", features = ["serde"] }
walkdir = "2.5.0"
guillotiere = { version = "0.6.2", features = ["serialization"] }
derive_more = { version = "1.0.0", features = ["display", "from", "from_str", "into"] }
naga = { version = "22.1.0", features = ["wgsl-in", "wgsl-out", "serialize", "deserialize"] }
rmp-serde = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
