[package]
name = "kardashev-assets"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[features]
default = ["server"]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-util"]

[dependencies]
axum = { version = "0.7", features = ["ws"], optional = true }
image = { version = "0.25.2", features = ["png"] }
palette = { version = "0.7.5", features = ["serializing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
walkdir = "2.5.0"
guillotiere = { version = "0.6.2", features = ["serialization"] }
derive_more = { version = "1.0.0", features = ["display", "from", "from_str", "into"] }
naga = { version = "22.1.0", features = ["wgsl-in", "wgsl-out", "serialize", "deserialize"] }
rmp-serde = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.64"
libflate = "2.1.0"
tokio = { version = "1", features = ["macros", "sync", "process"] }
tokio-util = { version = "0.7.12", optional = true }
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6.0", features = ["fs", "trace"], optional = true }
wasm-bindgen-cli-support = "=0.2.93"
walrus = { version = "=0.21.1", features = ["parallel"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
