[package]
name = "kardashev-client"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies]
bytes = "1.7.2"
futures-util = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-websocket = { version = "0.4.2", features = ["json"] }
thiserror = "1.0.64"
url = "2.5.2"
