[package]
name = "kardashev-client"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies]
bytes = "1.7.2"
futures-util = "0.3.30"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
reqwest-websocket = { version = "0.4.2", features = ["json"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", default-features = false, features = ["sync"] }
tracing = "0.1.40"
url = "2.5.2"
