[package]
name = "kardashev-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
mime = { version = "0.3.17", optional = true }
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
palette = { version = "0.7.5", features = ["serializing"] }
rmp-serde = "1.3.0"
semver = { version = "1.0.23", features = ["serde"] }
semver-macro = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.60"
uuid = { version = "1.9.1", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into"] }
naga = { version = "22.1.0", features = ["serialize", "deserialize"] }
