[package]
name = "kardashev-seed"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.6", features = ["gzip", "tokio"] }
color-eyre = "0.6.2"
clap = { version = "4.5.18", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
dotenvy = "0.15.7"
futures = "0.3.30"
image = { version = "0.25.2", features = ["png"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
nalgebra = "0.33.0"
num_cpus = "1.16.0"
palette = "0.7.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.1", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "uuid", "chrono", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
sqlx = { version = "0.8.2", features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
