[package]
name = "kardashev-server"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["http2", "tracing", "ws"] }
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive", "env"] }
color-eyre = "0.6"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into"] }
dotenvy = "0.15"
libflate = "2.1.0"
mime = "0.3.17"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
notify-async = { git = "https://github.com/FeraeLabs/notify-async.git" }
palette = { version = "0.7.5", features = ["serializing"] }
semver = "1.0.23"
semver-macro = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.0", features = ["fs"] }
tower-service = "0.3.3"
tracing = "0.1"
tracing-subscriber = "0.3"
