[package]
name = "kardashev-server"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["http2", "tracing", "ws"] }
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into"] }
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
palette = { version = "0.7.5", features = ["serializing"] }
semver = "1.0.23"
semver-macro = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "sync"] }
tokio-util = "0.7.12"
tracing = "0.1.40"

