[package]
name = "kardashev-style-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.kardashev-style-internal]
path = "../kardashev-style-internal"

[dependencies]
syn = { version = "2.0.79", features = ["parsing", "printing"] }
proc-macro2 = { version = "1.0.86" }
quote = "1.0.37"
thiserror = "1.0.64"
darling = "0.20.10"
heck = "0.5.0"
