[package]
name = "kardashev-ui"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies.kardashev-client]
workspace = true

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-utils = "0.2.0"
hecs = { version = "0.10", features = ["macros"] }
image = { version = "0.25", default-features = false }
lazy_static = "1.4"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.13.5", features = [] }
nalgebra = "0.33.0"
palette = "0.7"
stylance = "0.5.1"
thiserror = "1"
tokio = { version = "1.36", default-features = false, features = ["sync", "macros"] }
tracing = "0.1"
tracing-wasm = "0.2"
url = "2.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "ImageData"] }
wgpu = { version = "22.1.0", features = ["webgl"] }
winit = "0.30.5"
tobj = "4.0.2"
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.7", features = ["json"] }
linear-map = { version = "1.2.0", features = ["serde", "serde_impl"] }
parking_lot = "0.12.3"

[package.metadata.stylance]
output_file = "../target/app.scss"
class_name_pattern = "kardashev-[name]-[hash]"
scss_prelude = '@use "../kardashev-ui/prelude.scss" as *;'
