[package]
name = "kardashev-ui"
version = "0.1.0"
edition = "2021"

[dependencies.kardashev-protocol]
workspace = true

[dependencies.kardashev-client]
workspace = true

[dependencies.kardashev-style]
workspace = true

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-utils = "0.2.0"
hecs = { version = "0.10", features = ["macros"] }
image = { version = "0.25", default-features = false }
lazy_static = "1.4"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.13.5", features = [] }
nalgebra = "0.33.0"
palette = "0.7"
thiserror = "1"
tokio = { version = "1.36", default-features = false, features = ["sync", "macros"] }
tracing = "0.1"
tracing-wasm = "0.2"
url = { version = "2.5", features = ["serde"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "ImageData"] }
wgpu = { version = "22.1.0", features = ["webgl", "serde"] }
tobj = "4.0.2"
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.7", features = ["json"] }
linear-map = { version = "1.2.0", features = ["serde", "serde_impl"] }
parking_lot = "0.12.3"
raw-window-handle = "0.6.2"
codee = { version = "0.2.0", features = ["json_serde"] }
bitflags = "2.6.0"
rmp-serde = "1.3.0"
idb = { git = "https://github.com/devashishdxt/idb.git" }
chrono = { version = "0.4.38", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.15"
bytes = { version = "1.7.2", features = ["serde"] }
serde_json = "1.0.128"
gloo-file = "0.3.0"
wasm-streams = "0.4.1"
tokio-util = { version = "0.7.12", features = ["compat", "io"] }
arrayvec = "0.7.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-time = "1.1.0"

[package.metadata.kardashev.style]
# Specify a directory to which to write the output CSS.
output = "target/css/kardashev-ui"
#
# Alternative name to use in class names and for output files.
crate_name = "kardashev"
