[package]
name = "kardashev-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-wasm = "0.2"
thiserror = "1"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.10", features = ["serde"] }
console_error_panic_hook = "0.1"
futures = "0.3"
url = "2.5"
tokio = { version = "1.36", default-features = false }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
wgpu = { version = "0.19", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Window", "Document"] }
winit = "0.29"

[dependencies.kardashev-client]
path = "../kardashev-client"
