[package]
name = "kardashev-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-wasm = "0.2"
thiserror = "1"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.10", features = ["serde"] }
console_error_panic_hook = "0.1"
futures = "0.3"
url = "2.5"
tokio = { version = "1.36", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "b3c5a6f" }
web-sys = { version = "0.3", features = ["Window", "Document", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "ImageData"] }
winit = "0.29"
hecs = { version = "0.10", features = ["macros"] }
palette = "0.7"
nalgebra = "0.32"
lazy_static = "1.4"
obj-rs = "0.7"
bytemuck = { version = "1.15", features = ["derive"] }
image = { version = "0.25", default-features = false }

[dependencies.kardashev-client]
workspace = true
