[package]
name = "kardashev-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2", "tracing", "ws"] }
color-eyre = "0.6"
dotenvy = "0.15"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
structopt = "0.3.26"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
